# arc-knowledge-ai

./: .gitignore  PROGRESS.md  README.md
app/config/: settings.py
app/domain/: retrieval.py
history_version/v3.0/: .env.example  CLAUDE.md  PROGRESS.md  docker-compose.yml  pyproject.toml
history_version/v3.0/app/: main.py
history_version/v3.0/app/api/routers/: chat.py
history_version/v3.0/app/config/: settings.py
history_version/v3.0/app/infrastructure/minio/: client.py
history_version/v3.0/app/infrastructure/postgres/repositories/: chunk_repo.py
history_version/v3.0/app/pipeline/core/: hook.py  pipeline.py  stage.py
history_version/v3.0/app/pipeline/stages/embedding/: es_index_stage.py
history_version/v3.0/app/pipeline/stages/retrieval/: rerank_stage.py  rrf_fusion_stage.py  vector_search_stage.py
history_version/v3.0/app/pipeline/strategies/ingestion/: standard_strategy.py
history_version/v3.0/app/pipeline/strategies/retrieval/: hybrid_strategy.py
history_version/v3.0/app/services/: chat_service.py  retrieval_service.py
history_version/v3.0/app/workflows/: rag_orchestrator.py
history_version/v3.0/notes/: 08-strategy.md  13-infrastructure.md  14-full-flow-v2.md  README.md
history_version/v3.0/notes/python_basic_knowledge/: 01-python-basics.md
history_version/v3.0/tests/unit/stages/: test_embed_stage.py
learn/: 01-domain-model.md  03-stage.md  09-workflow.md  10-service-api.md  README.md
notes/: 00-overview.md  03-stage.md  04-pipeline.md  05-hook.md  06-registry.md  07-provider.md  11-full-flow.md  12-diagrams.md  15-retrieval-pipeline.md  16-full-flow-v3.md  README.md
(+47 files in other folders)
