[project]
name = "arc-knowledge-ai"
version = "0.1.0"
description = "ArcKnowledge AI 数据面——文档处理、检索、RAG 生成"
requires-python = ">=3.11"

dependencies = [
    # Web 框架
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # 数据验证
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # 数据库
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    # 向量库
    "pymilvus>=2.4",
    # 全文检索
    "elasticsearch[async]>=8.13",
    # 缓存
    "redis[hiredis]>=5.0",
    # 对象存储
    "boto3>=1.34",           # S3 兼容（MinIO / AWS S3）
    # 工作流
    "temporalio>=1.7",
    # 文档解析
    "unstructured[all-docs]>=0.14",
    # OCR（单独安装，需要系统依赖）
    # "paddleocr>=2.7",
    # OpenAI
    "openai>=1.30",
    # HTTP 客户端
    "httpx>=0.27",
    # 可观测性
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
    "prometheus-client>=0.20",
    # gRPC
    "grpcio>=1.64",
    "grpcio-tools>=1.64",
    # 配置中心
    "nacos-sdk-python>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "black>=24.4",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
